Update ReportTemplateBizlet to add validation for scheduling reports with required parameters